<resources>
    <string name="app_name">Electronic documents</string>
    <string name="list">Название</string>
    <string name="list2">Номер</string>
    <string name="list3">Дата</string>
    <string name="check">Запомнить</string>
    <string name="action_search">Поиск</string>
    <string name="action_close">Выход</string>
    <string name="action_settings">Настройки</string>
    <string name="action_start">На главную</string>
    <string name="action_start2">Главная</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_information">Информация</string>
    <string name="action_sign">Подписать</string>
    <string name="about_author">Приложение разработано студентом 4 курса специальности АСОИ Фиешко В.А.</string>
    <string name="about_program">Приложение основано на базе системы EDI и предназначено для электронного документооборота между клиентом и поставщиком продукции .</string>
    <string name="action_open">Открыть</string>
    <string name="name_text">Название документа</string>
    <string name="num_text">Номер документа</string>
    <string name="data_text">Дата</string>
    <string name="pref_title_login">Логин</string>
    <string name="pref_title_password">Пароль</string>
    <string name="pref_title_server">Имя сервера</string>
    <string name="pref_title_url">URL сервера</string>
    <string name="pref_title_size">Размер шрифта</string>
    <string name="pref_title_color">Цвет текста</string>
    <string name="pref_default_login">savushkin</string>
    <string name="pref_default_password">MMGefrK9B</string>
    <string name="pref_default_server">http://topby.by/</string>
    <string name="pref_default_url">http://topby.by:1984/DmcService?WSDL</string>
    <string name="start_authorization">Авторизация</string>
    <string name="edit_password">введите пароль</string>
    <string name="edit_server">Название сервера</string>
    <string name="text_password">Пароль:</string>
    <string name="edit_login">введите имя</string>
    <string name="text_login">Логин:</string>
    <string name="text_server">Имя сервера:</string>
    <string name="text_url">URL сервера:</string>
    <string name="edit_url">введите url</string>
    <string name="pref_size">Размер</string>
    <string name="pref_style">Стиль</string>
    <string name="pref_color">Цвет</string>
    <string name="pref_color_black">Черный</string>
    <string name="pref_color_red">Красный</string>
    <string name="pref_color_green">Зеленый</string>
    <string name="pref_color_blue">Синий</string>
    <string name="button_connect">Подключиться</string>
    <string name="pref_header_server">Настройки сервера</string>
    <string name="pref_header_personal">Настройки пользователя</string>
    <string name="pref_header_general">Общие настройки</string>
    <string name="pref_login">login</string>
    <string name="pref_password">pass</string>
    <string name="pref_server">server</string>
    <string name="pref_url">url</string>
    <string name="action_send">Отправить</string>
    <string name="action_confirm">Подтвердить</string>
</resources>
