<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:icon="@android:color/holo_purple"
        android:title="@string/pref_header_personal">

        <EditTextPreference
            android:defaultValue="@string/pref_default_login"
            android:dialogTitle="Введите ваш логин"
            android:inputType="text"
            android:key="@string/pref_login"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_login" />
        <EditTextPreference
            android:defaultValue="@string/pref_default_password"
            android:dialogTitle="Введите ваш пароль"
            android:inputType="textPassword"
            android:key="@string/pref_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_password" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_server">

        <EditTextPreference
            android:defaultValue="@string/pref_default_server"
            android:inputType="text"
            android:key="@string/pref_server"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_server"
            android:dialogTitle="Введите имя сервера"/>
        <EditTextPreference
            android:defaultValue="@string/pref_default_url"
            android:inputType="text"
            android:key="@string/pref_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_url"
            android:dialogTitle="Введите URL сервера"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_general">

        <EditTextPreference
            android:key="@string/pref_size"
            android:title="Размер шрифта"
            android:summary="Устанавливает новый размер шрифта"
            android:defaultValue="14"
            android:dialogTitle="Введите размер шрифта (от 10 до 32)" />

        <ListPreference
            android:key="@string/pref_style"
            android:title="Стиль для шрифта"
            android:summary="Устанавливает стиль для шрифта"
            android:defaultValue="0"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:dialogTitle="Выберите стиль для шрифта" />

        <CheckBoxPreference
            android:key="night"
            android:title="Ночной режим"
            android:summary="Включить темную подсветку текста"
            android:defaultValue="false" />
        <Preference android:title="Cохранить настройки" android:key="pref_button"/>
    </PreferenceCategory>
</PreferenceScreen>