<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EDI">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_36dp"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:title="@string/action_information"
        android:icon="@drawable/ic_power_settings_new_white_36dp"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="withText" />
    </group>
</menu>



