<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/Autentific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_authorization"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/password_text"
        android:layout_alignBottom="@+id/password_text"
        android:layout_alignStart="@+id/edit_user"
        android:layout_alignEnd="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_server"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_alignTop="@+id/name_text"
        android:layout_alignStart="@+id/edit_url" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_password"
        android:textSize="16sp"
        android:layout_below="@+id/user_text"
        android:layout_alignStart="@+id/name_text" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_login"
        android:textSize="16sp"
        android:layout_above="@+id/password_text"
        android:layout_alignStart="@+id/edit_url"
        android:layout_alignEnd="@+id/edit_name" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_text"
        android:layout_below="@+id/Autentific"
        android:layout_marginTop="50dp"
        android:text="@string/text_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_server"
        android:textSize="16sp"
        android:layout_below="@+id/edit_password"
        android:layout_toStartOf="@+id/cbRemember" />

    <TextView
        android:id="@+id/url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_url"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/edit_url"
        android:layout_alignBottom="@+id/edit_url"
        android:layout_alignStart="@+id/name_text" />

    <EditText
        android:id="@+id/edit_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/edit_url"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_below="@+id/edit_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="37dp"
        android:background="@drawable/red_button"
        android:onClick="Login"
        android:text="@string/button_connect"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/cbRemember"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/check"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/edit_url"
        android:layout_alignStart="@+id/Autentific" />
</RelativeLayout>
