<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/NameDoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:lines="3"
        android:paddingTop="10dp"
        android:text="@string/list"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/NumDoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:lines="3"
        android:paddingTop="10dp"
        android:text="@string/list2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/DataDoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:lines="3"
        android:paddingTop="10dp"
        android:text="@string/list3"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />
</LinearLayout>





